fixed target on firefox

--- a/src/web/src/components/mapComponent/mapComponent.module.css
+++ b/src/web/src/components/mapComponent/mapComponent.module.css
@@ -14,10 +14,8 @@
 
 .target_svg {
     position: absolute;
-    top: 0;
-    display: flex;
-    width: 100%;
-    height: 100%;
+    top: calc(50% - 20px);
+    left: calc(50% - 20px);
     z-index: 1;
     pointer-events: none;
     stroke: rgb(64, 255, 0);
